腾讯面试题update

--- a/面试题/腾讯.md
+++ b/面试题/腾讯.md
@@ -13,7 +13,101 @@ Babel 会把 JSX 转译成一个名为 React.createElement() 函数调用。
 
 
 ### 闭包作用
+1. 模块化封装
+```js
+//定义一个模块
+function module(n) {
+  //私有属性
+  let name = n;
+  //私有方法
+  function getModuleName() {
+    return name;
+  }
+  //私有方法
+  function someMethod() {
+    console.log("coffe1891");
+  }
+  //以一个对象的形式返回
+  return {
+    getModuleName: getModuleName,
+    getXXX: someMethod
+  };
+}
 
+let myapp = module("myModule");//定义一个模块
+console.log(myapp.getModuleName()); //>> myModule
+console.log(myapp.getXXX()); //>> coffe1891
+```
+
+2. 扩展全局对象的方法
+利用闭包扩展全局对象，可以有效地保护私有变量，形成一定的封装、持久性。
+```js
+function setupSomeGlobals() {
+    //私有变量
+    var num = 666;
+
+    gAlertNumber = function() {//没有用var和let关键字声明，会成为全局对象的方法
+        console.log(num);
+    };
+
+    gIncreaseNumber = function() {
+        num++;
+    };
+
+    gSetNumber = function(x) {
+        num = x;
+    };
+}
+
+setupSomeGlobals();
+gAlertNumber(); //>> 666
+
+gIncreaseNumber();
+gAlertNumber(); //>> 667
+
+gSetNumber(1891);
+gAlertNumber(); //>> 1891
+```
+3. 延长局部变量的生命
+Image对象经常被用于数据统计的上报
+```js
+var report = function(src) {
+    var img = new Image();
+    img.src = src;
+}
+report('http://www.xxx.com/getClientInfo');//把客户端信息上报数据
+```
+这段代码在运行时，发现在一些低版本浏览器上存在bug，会丢失部分数据上报。原因是Image对象是report函数中的局部变量，当report函数调用结束后，Image对象随即被JS引擎垃圾回收器回收，而此时可能还没来得及发出http请求，所以可能导致此次上报数据的请求失败。
+
+我们可以使用闭包把Image对象封闭起来，就可以解决数据丢失的问题
+```js
+var report = (function() {
+    var imgs = [];//在内存里持久化
+    return function(src) {
+        var img = new Image();
+        imgs.push(img);//引用局部变量imgs
+        img.src = src;
+    }
+}());
+report('http://www.xxx.com/getClientInfo');//把客户端信息上报数据
+```
+### 闭包缺点
+```js
+function A(){
+    var count = 0;
+    function B(){
+       count ++;
+       console.log(count);
+    }
+    return B;//函数B保持了对count的引用
+}
+var b = A();
+b();//>> 1
+b();//>> 2
+b();//>> 3
+
+```
+避免闭包导致内存泄漏的解决方法是，在函数A执行完毕退出函数调用栈之前，将不再使用的局部变量全部删除或者赋值为null。
 
 ### react 遍历的子元素点击事件是如何处理的
 
