--- a/React/事件机制.md
+++ b/React/事件机制.md
@@ -1,3 +1,48 @@
+[参考文献地址](https://cloud.tencent.com/developer/article/1516369)
+react自身实现了一套自己的事件机制，包括事件注册、事件的合成、事件冒泡、事件派发等，虽然和原生的是两码事，但也是基于浏览器的事件机制下完成的。
+
+我们都知道react 的所有事件并没有绑定到具体的dom节点上而是绑定在了document 上，然后由统一的事件处理程序来处理，同时也是基于浏览器的事件机制（冒泡），所有节点的事件都会在 document 上触发。
+
+浏览器事件的执行需要经过三个阶段，捕获阶段-目标元素阶段-冒泡阶段。
+节点上的原生事件的执行是在目标阶段，然而合成事件的执行是在冒泡阶段，所以原生事件会先合成事件执行，然后再往父节点冒泡。
+原生事件（阻止冒泡）会阻止合成事件的执行
+
+合成事件（阻止冒泡）不会阻止原生事件的执行
+
+### 意义
+1. 减少内存消耗，提升性能，不需要注册那么多的事件了，一种事件类型只在 document 上注册一次
+2. 统一规范，解决 ie 事件兼容问题，简化事件逻辑
+3. 对开发者友好
+
+### 对于合成的理解
+1. 对原生事件的封装
+2. 对某些原生事件的升级和改造
+3. 不同浏览器事件兼容的处理
+给一个元素添加 click事件的回调方法,方法中的参数 e，其实不是原生事件对象而是react包装过的对象，同时原生事件对象被放在了属性 e.nativeEvent内。
+SyntheticEvent是react合成事件的基类，定义了合成事件的基础公共属性和方法。
+
+react会根据当前的事件类型来使用不同的合成事件对象，比如鼠标单机事件 - SyntheticMouseEvent，焦点事件-SyntheticFocusEvent等，但是都是继承自SyntheticEvent。
+
+
+### 对原生事件的升级和改造
+对于有些dom元素事件，我们进行事件绑定之后，react并不是只处理你声明的事件类型，还会额外的增加一些其他的事件，帮助我们提升交互的体验
+可以看到react不只是注册了一个onchange事件，还注册了很多其他事件。
+
+而这个时候我们向文本框输入内容的时候，是可以实时的得到内容的。
+
+然而原生只注册一个onchange的话，需要在失去焦点的时候才能触发这个事件，所以这个原生事件的缺陷react也帮我们弥补了。
+
+### 浏览器事件的兼容处理
+react在给document注册事件的时候也是对兼容性做了处理。
+
+
+### 事件注册机制
+react 事件注册过程其实主要做了2件事：事件注册、事件存储。
+a. 事件注册 - 组件挂载阶段，根据组件内的声明的事件类型-onclick，onchange 等，给 document 上添加事件 -addEventListener，并指定统一的事件处理程序 dispatchEvent。
+b. 事件存储 - 就是把 react 组件内的所有事件统一的存放到一个对象里，缓存起来，为了在触发事件的时候可以查找到对应的方法去执行。
+
+
+
 - react的所有事件都挂载在document中
 - 当真实dom触发后冒泡到document后才会对react事件进行处理
 - 所以原生的事件会先执行
