--- a/HTTP/前端缓存.md
+++ b/HTTP/前端缓存.md
@@ -40,3 +40,11 @@
 - Last-Modified 能够感知的单位时间是秒，如果文件在 1 秒内改变了多次，那么这时候的 Last-Modified 并没有体现出修改了。
 2. 在性能上，Last-Modified优于ETag，也很简单理解，Last-Modified仅仅只是记录一个时间点，而 Etag需要根据文件的具体内容生成哈希值。
 3. 另外，如果两种方式都支持的话，服务器会优先考虑ETag
+
+
+### ETag是如何生成的
+Etag是服务器响应请求时，返回当前资源文件的一个唯一标识(由服务器生成)。
+`ETag: W/"<etag_value>"
+ ETag: "<etag_value>"
+`
+实体标签唯一地表示所请求的资源。 它们是位于双引号之间的ASCII字符串（如“675af34563dc-tr34”）。 没有明确指定生成ETag值的方法。 通常，使用内容的散列，最后修改时间戳的哈希值，或简单地使用版本号。 例如，MDN使用wiki内容的十六进制数字的哈希值。
