实现ES6 class 和 extends

--- a/Javascript/源码实现.md
+++ b/Javascript/源码实现.md
@@ -767,3 +767,107 @@ function reduce(arr, reduceCallback, initialValue) {
 
 
 ### ES6 class 和 extends 实现
+```js
+class Parent {
+  constructor(name) {
+    this.name = name;
+  }
+
+  /**
+   * 静态方法，通过 Parent 调用
+   */
+  static getMe() {
+    console.log("this is super");
+  }
+
+  /**
+   * 公共方法，在 prototype 上
+   */
+  getName() {
+    console.log(this.name);
+  }
+}
+```
+
+```js
+var _createClass = (function () {
+    function defineProperties(target, props) {
+        for (var i = 0; i < props.length; i++) {
+            var descriptor = props[i];
+            descriptor.enumerable = descriptor.enumerable || false;
+            descriptor.configurable = true;
+            if ("value" in descriptor) descriptor.writable = true;
+            Object.defineProperty(target, descriptor.key, descriptor);
+        }
+    }
+    return function (Constructor, protoProps, staticProps) {
+        // 原型上属性, 添加到Constructor 的原型上
+        if (protoProps) defineProperties(Constructor.prototype, protoProps);
+        // 类上的属性, 添加到Constructor 类上
+        if (staticProps) defineProperties(Constructor, staticProps);
+        return Constructor;
+    };
+})();
+
+function (instance, Constructor) {
+    if (!(instance instanceof Constructor)) {
+        throw new TypeError("Cannot call a class as a function");
+    }
+}
+
+var Parent = (function () {
+    function Parent(name) {
+        _classCallCheck(this, Parent);
+        this.name = name;
+    }
+    _createClass(
+        Parent,
+        [
+            {
+                key: "getName",
+                value: function getName() {
+                    console.log(this.name);
+                }
+            }
+        ],
+        [
+            {
+                key: "getMe",
+                value: function getMe() {
+                    console.log("this is super");
+                }
+            }
+        ]
+    );
+    return Parent;
+})();
+```
+
+
+extends 实现
+```js
+function _inherits(subClass, superClass) {
+    // 类型检测
+    if (typeof superClass !== "function" && superClass !== null) {
+        throw new TypeError(
+            "Super expression must either be null or a function, not " +
+            typeof superClass
+        );
+    }
+    subClass.prototype = Object.create(superClass && superClass.prototype, {
+        constructor: {
+            value: subClass, // subClass.prototype.constructor 指向 subClass
+            enumerable: false, // constructor 不可枚举
+            writable: true,
+            configurable: true
+        }
+    });
+
+    if (superClass) {
+        // 设置子类的__proto__ 让 Child 能访问父类静态属性
+        Object.setPrototypeOf
+            ? Object.setPrototypeOf(subClass, superClass)
+            : (subClass.__proto__ = superClass);
+    }
+}
+```
