--- a/Javascript/跨域.md
+++ b/Javascript/跨域.md
@@ -8,7 +8,7 @@
 如果没有同源策略，不同源的数据和资源（如HTTP头、Cookie、DOM、localStorage等）就能相互随意访问
 
 #### JSONP
-
+`JSON with Padding`
 - server端
 ```js
 const url = require('url');
