--- a/Javascript/源码实现.md
+++ b/Javascript/源码实现.md
@@ -147,6 +147,37 @@ function asyncToGenerator(generatorFunc) {
 const hello =asyncToGenerator(testG)();
 hello.then(value=>console.log(value));
 ```
+#### async 实现原理
+```js
+function spawn(genF) {
+    return new Promise(function (resolve, reject) {
+        const gen = genF();
+        function step(nextF) {
+            let next;
+            try {
+                next = nextF();
+            } catch (e) {
+                return reject(e);
+            }
+            if (next.done) {
+                return resolve(next.value);
+            }
+            Promise.resolve(next.value).then(function (v) {
+                step(function () {
+                    return gen.next(v);
+                });
+            }, function (e) {
+                step(function () {
+                    return gen.throw(e);
+                });
+            });
+        }
+        step(function () {
+            return gen.next(undefined);
+        });
+    });
+}
+```
 
 ### 实现promise.race
 ```js
