--- a/Javascript/跨域.md
+++ b/Javascript/跨域.md
@@ -9,6 +9,10 @@
 
 #### JSONP
 `JSON with Padding`
+原理：
+`
+在当前DOM树里新添加一个<script>标签，通过其src属性发起一个http/https请求向服务器端请求API，让其异步非阻塞地返回一段远程JS代码，然后在客户端执行该远程代码。
+`
 - server端
 ```js
 const url = require('url');
