--- a/Javascript/面向对象.md
+++ b/Javascript/面向对象.md
@@ -316,13 +316,10 @@ function inheritPrototype(subType, superType) {
 每个构造函数都有一个原型对象，原型对象都包含一个指向构造函数的指针，实例都包含一个指向原型对象的内部指针。假如让原型对象等于另一个类型的实例，那么此时的原型对象将包含一个指向另一个原型的指针
 
 
-JavaScript 只有一种结构：对象。每个实例对象（ object ）都有一个私有属性（称之为 __proto__ ）指向它的构造函数的原型对象（prototype ）。该原型对象也有一个自己的原型对象( __proto__ ) ，层层向上直到一个对象的原型对象为 null。根据定义，null 没有原型，并作为这个原型链中的最后一个环节。
+JavaScript 只有一种结构：对象。每个实例对象（ object ）都有一个私有属性（称之为 `__proto__` ）指向它的构造函数的原型对象（prototype ）。该原型对象也有一个自己的原型对象( __proto__ ) ，层层向上直到一个对象的原型对象为 null。根据定义，null 没有原型，并作为这个原型链中的最后一个环节。
 
-在任何值上调用Object原生的toString方法，都会返回一个[object NativeConstructorName]格式的字符串，每个类在内部都有一个[[Class]] 属性，这个属性中就指定了上述字符串中的构造函数名。
+在任何值上调用Object原生的toString方法，都会返回一个`[object NativeConstructorName]`格式的字符串，每个类在内部都有一个`[[Class]]` 属性，这个属性中就指定了上述字符串中的构造函数名。
 
-`
-
-`
 
 ### 创建一个作用域安全的构造函数
 当没有使用new操作符来调用构造函数的情况，由于this对象是在运行时绑定的，所以直接调用Person(),this会映射到全局对象window上。
