--- a/HTTP/前端缓存.md
+++ b/HTTP/前端缓存.md
@@ -48,3 +48,11 @@ Etag是服务器响应请求时，返回当前资源文件的一个唯一标识(
  ETag: "<etag_value>"
 `
 实体标签唯一地表示所请求的资源。 它们是位于双引号之间的ASCII字符串（如“675af34563dc-tr34”）。 没有明确指定生成ETag值的方法。 通常，使用内容的散列，最后修改时间戳的哈希值，或简单地使用版本号。 例如，MDN使用wiki内容的十六进制数字的哈希值。
+
+
+### cookie有哪些属性
+expires
+max-age
+domain
+path
+secure
