--- a/CSS/基础.md
+++ b/CSS/基础.md
@@ -45,13 +45,13 @@ color <length><length><length>?
 
 ### 空白符
 white-space
-|  值   | 空白符  | 换行符 | 自动换行|
-|  ----  | ----  |----  | ----  |
-| pre-line  | 合并 |保留|允许|
-| normal  | 合并 |忽略|允许|
-| nowrap  | 合并 |忽略|不允许|
-| pre  | 保留 |保留|不允许|
-| pre-wrap  | 保留 |保留|允许|
+| 值       | 空白符 | 换行符 | 自动换行 |
+|----------|--------|--------|----------|
+| pre-line | 合并   | 保留   | 允许     |
+| normal   | 合并   | 忽略   | 允许     |
+| nowrap   | 合并   | 忽略   | 不允许   |
+| pre      | 保留   | 保留   | 不允许   |
+| pre-wrap | 保留   | 保留   | 允许     |
 
 ## 伪类和伪元素
 ### 伪类选择器
@@ -74,13 +74,21 @@ white-space
 
 
 ## 继承
-|  可继承   | 不可继承  | 
-|  ----  | ----  |
-| h1  |  |
-| ul  |  |
-|   |  |
-|   |  |
-|   |  |
+| 可继承      | 不可继承 |
+|-------------|----------|
+| h1          | border   |
+| ul          | padding  |
+| font-size   | margin   |
+| font-family | width    |
+| color       | height   |
+| li          |          |
+| dl          |          |
+| dd          |          |
+| dt          |          |
+
+### 优先级
+`!important > id > class > tag`
+important 比 内联优先级高,但内联比 id 要高
 
 ### 项目怎么做移动端适配
 ```html
@@ -99,3 +107,19 @@ white-space
 rem是CSS3新增的一个相对单位（root em，根em），这个单位引起了广泛关注。这个单位与em有什么区别呢？区别在于使用rem为元素设定字体大小时，仍然是相对大小，但相对的只是HTML根元素。
 ### em
 
+
+### CSS 选择符：
+1. id选择器（ # myid）
+2. 类选择器（.myclassname）
+3. 标签选择器（div, h1, p）
+4. 相邻选择器（h1 + p）
+5. 子选择器（ul > li）
+6. 后代选择器（li a）
+7. 通配符选择器（ * ）
+8. 属性选择器（a[rel = "external"]）
+9. 伪类选择器（a: hover, li:nth-child）
+
+### src 和 href区别
+src用于替换当前元素；href用于在当前文档和引用资源之间确立联系。
+src是source的缩写，指向外部资源的位置，指向的内容将会嵌入到文档中当前标签所在位置
+href是Hypertext Reference的缩写，指向网络资源所在位置，建立和当前元素（锚点）或当前文档（链接）之间的链接
