--- a/HTTP/前端缓存.md
+++ b/HTTP/前端缓存.md
@@ -51,8 +51,8 @@ Etag是服务器响应请求时，返回当前资源文件的一个唯一标识(
 
 
 ### cookie有哪些属性
-expires
-max-age
-domain
-path
-secure
+- expires
+- max-age
+- domain
+- path
+- secure
