--- a/CSS/清除浮动.md
+++ b/CSS/清除浮动.md
@@ -1,1 +1,23 @@
 清除浮动影响方法很多，添加包裹属性的元素，例如：position:absolute，display:inline-block，float:left，overflow:hidden
+
+
+### 浮动原理
+浮动元素脱离文档流，不占据空间。浮动元素碰到包含它的边框或者浮动元素的边框停留。
+
+
+### 清除浮动方法
+1. 使用空标签清除浮动。
+这种方法是在所有浮动标签后面添加一个空标签 定义css clear:both. 弊端就是增加了无意义标签。
+2. 使用after伪对象清除浮动
+该方法只适用于非IE浏览器。具体写法可参照以下示例。使用中需注意以下几点。一、该方法中必须为需要清除浮动元素的伪对象中设置 height:0，否则该元素会比实际高出若干像素；
+```css
+#parent:after{
+ content:".";
+ height:0;
+ visibility:hidden;
+ display:block;
+ clear:both;
+ }
+```
+3. 设置overflow为hidden或者auto
+4. 浮动外部元素
