--- a/Javascript/跨域.md
+++ b/Javascript/跨域.md
@@ -126,6 +126,11 @@ console.log("启动服务");
 
 ```
 
+#### 修改document.domain
+ 将子域和主域的document.domain设为同一个主域.前提条件：这两个域名必须属于同一个基础域名!而且所用的协议，端口都要一致，否则无法利用document.domain进行跨域
+
+ #### 使用window.name来进行跨域
+window对象有个name属性，该属性有个特征：即在一个窗口(window)的生命周期内,窗口载入的所有的页面都是共享一个window.name的，每个页面对window.name都有读写的权限，window.name是持久存在一个窗口载入过的所有页面中的
 
 #### 埋点数据上报
 - AJAX 请求
