--- a/面试题/头条.md
+++ b/面试题/头条.md
@@ -69,3 +69,17 @@ export default function App() {
 ```
 
 ### 实现 promise.all
+
+
+### 
+```js
+var name = 'hello'
+(function() {
+  if (typeof name === 'undefined') {
+    var name = 'Jack';
+    console.log('goodbye', name);
+  } else {
+    console.log('hello', name);
+  }
+})();
+```
