--- a/Javascript/缓存对比.md
+++ b/Javascript/缓存对比.md
@@ -1,8 +1,13 @@
 ### cookie
 服务器对任意HTTP请求发送Set-Cookie HTTP头作为响应的一部分。
 浏览器中对于cookie的尺寸也有限制，大多数浏览器都有大约4KB的长度限制。当超过单个域名限制之后还要再设置cookie，浏览器就会清除以前设置的cookie。
-
-
+操作cookie：document.cookie = ''
+#### 设置cookie过期时间
+`document.cookie = "userId=nick123; expires=Wed, 15 Jan 2020 12:00:00 UTC"`
+#### 设置cookie路径
+`document.cookie = "userId=nick123; expires=Wed, 15 Jan 2020 12:00:00 UTC; path=/user"`
+#### 设置cookie域
+`document.cookie = "userId=nick123; expires=Wed, 15 Jan 2020 12:00:00 UTC; path=/user; domain=mysite.com"`
 ### storage
 globalStorage 提供一种存储大量可以跨会话存在的数据的机制
 - clear()
