--- a/Javascript/面向对象.md
+++ b/Javascript/面向对象.md
@@ -355,11 +355,14 @@ obj2.c=3
 ### 事件
 事件流描述的是从页面中接收事件的顺序
 
-事件冒泡，事件开始时由最具体的元素接收，然后逐级向上传播到较为不具体的结点
-事件捕获，不太具体的节点应该更早接收到事件，最具体的节点应该最后接收到事件
+事件冒泡，事件开始时由最具体的元素接收，然后逐级向上传播到较为不具体的结点。**对事件作出响应**
+事件捕获，不太具体的节点应该更早接收到事件，最具体的节点应该最后接收到事件。**为截获事件提供机会**
 
 事件流包括：事件捕获，处于目标，事件冒泡三个阶段。事件捕获为截获事件提供机会，冒泡阶段对事件作出响应
 
+#### 事件应用
+事件冒泡应用：事件委托/代理
+事件代理应用：让用户以为可以点击到某个元素但实际上父元素想发挥一个阻拦层区域效果的时候
 
 ### 函数表达式
 函数声明的重要特征：函数声明提升
