浏览器原理update

--- a/浏览器/浏览器.md
+++ b/浏览器/浏览器.md
@@ -38,3 +38,11 @@ JPEG是有损的、采用直接色的、点阵图。
 #### png
 无损的、使用直接色的、点阵图。
 PNG 格式 就是可以无背景 进行图片透明化
+
+
+## 浏览器渲染原理
+等待资源加载时间和大部分情况下的浏览器单线程执行是影响Web性能的两大主要原因。
+
+### 导航
+#### DNS查找
+[浏览器渲染原理](https://developer.mozilla.org/zh-CN/docs/Web/Performance/%E6%B5%8F%E8%A7%88%E5%99%A8%E6%B8%B2%E6%9F%93%E9%A1%B5%E9%9D%A2%E7%9A%84%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86)
