--- a/Javascript/跨域.md
+++ b/Javascript/跨域.md
@@ -1,5 +1,5 @@
 [参考文献](https://github.com/happylindz/blog/issues/3)
-[软一峰](https://www.ruanyifeng.com/blog/2016/04/cors.html)
+[阮一峰](https://www.ruanyifeng.com/blog/2016/04/cors.html)
 [CORS](https://github.com/amandakelake/blog/issues/62)
 ### 浏览器同源策略
 如果两个 URL 的 protocol、port (如果有指定的话)和 host 都相同的话，则这两个 URL 是同源。
@@ -140,3 +140,19 @@ window对象有个name属性，该属性有个特征：即在一个窗口(window
 
 
 #### 简单请求
+### OPTIONS 请求
+使用OPTIONS方法对服务器发起请求，可以检测服务器支持哪些 HTTP 方法
+>规范要求，对那些可能对服务器数据产生副作用的 HTTP 请求方法（特别是 GET 以外的 HTTP 请求，或者搭配某些 MIME 类型的 POST 请求），浏览器必须首先使用 OPTIONS 方法发起一个预检请求（preflight request），从而获知服务端是否允许该跨域请求。
+
+所以这个跨域请求触发了浏览器自动发起OPTIONS请求，看看此次跨域请求具体触发了哪些条件。
+#### 跨域请求时，OPTIONS请求触发条件
+
+|  CORS预检请求触发条件   | 
+|  ----  | 
+| 1. 使用 HTTP方法 PUT/DELETE/CONNECT/OPTIONS/TRACE/PATCH  | 
+| 2. 人为设置了以下集合之外首部字段：Accept/Accept-Language/Content-Language/Content-Type/DPR/Downlink/Save-Data/Viewport-Width/Width  |
+| 3. Content-Type 的值不属于下列之一: application/x-www-form-urlencoded、multipart/form-data、text/plain|
+
+#### 优化OPTIONS请求：Access-Control-Max-Age 或者 避免触发
+>Access-Control-Max-Age这个响应首部表示 preflight request  （预检请求）的返回结果（即 Access-Control-Allow-Methods 和Access-Control-Allow-Headers 提供的信息） 可以被缓存的最长时间，单位是秒。(MDN)
+ 
