--- a/ES6/方法汇总.md
+++ b/ES6/方法汇总.md
@@ -47,11 +47,47 @@ let [x, y] = numbers()
 
 concat、扩展运算符、push.apply、for循环
 
+#### push使用方法
+```js
+const arr1 = [1, 2, 34, 4];
+const arr2 = [2, 3, 4, 5];
+arr1.push(1, 2, 3, 4);
+arr1.push(...arr2);
+Array.prototype.push.apply(arr1, arr2);
+// apply用法可以将需要传递为数组的转换为arguments
+```
+
 > 合并对象
 
 Object.assign、扩展运算符、深浅拷贝
 
+### async 函数
+> 腾讯 请求多个接口返回数据
+```js
+const arr = [1, 2, 3, 4, 5];
+const asyncFn = (data) => {
+  setTimeout(() => Promise.resolve(data), 1000);
+};
 
+const main = async _ => {
+  const results = await Promise.all(arr.map(async num => {
+    await asyncFn();
+    return num++;
+  }));
+  console.log(results);
+};
+
+
+const main2 = async _ => {
+  const result = await arr.reduce(async (prev, next) => {
+    const tmp = await prev;
+    return tmp + next;
+  }, Promise.resolve(0));
+  console.log(result);
+};
+
+main2()
+```
 
 ###  解构赋值
 
