--- a/Javascript/深浅拷贝.md
+++ b/Javascript/深浅拷贝.md
@@ -23,8 +23,13 @@ function shallowCopy(obj) {
 
 
 #### Object.assign
-Object.assign() 方法可以把任意多个的源对象自身的可枚举属性拷贝给目标对象，然后返回目标对象
+> Object.assign() 方法用于将所有可枚举的属性的值从一个或多个源对象复制到目标对象。它将返回目标对象。
 
+Object.assign() 方法可以把任意多个的源对象自身的可枚举属性拷贝给目标对象，然后返回目标对象。
+
+**深度拷贝问题**
+
+针对深度拷贝，需要使用其他方法，因为 Object.assign()拷贝的是属性值。假如源对象的属性值是一个指向对象的引用，它也只拷贝那个引用值。
 
 #### concat/slice 
 ```js
@@ -40,7 +45,9 @@ console.log({array},{arrayConcat})
 原数组都发生了改变
 
 ### 深拷贝
-#### JSON.parse(JSON.stringify())
+```js
+JSON.parse(JSON.stringify())
+```
 
 ```js
 function cloneDeep(source) {
