--- a/面试题/腾讯.md
+++ b/面试题/腾讯.md
@@ -2,9 +2,52 @@
 React 认为渲染逻辑本质上与其他 UI 逻辑内在耦合，比如，在 UI 中需要绑定处理事件、在某些时刻状态发生变化时需要通知到 UI，以及需要在 UI 中展示准备好的数据。
 React 并没有采用将标记与逻辑进行分离到不同文件这种人为地分离方式，而是通过将二者共同存放在称之为“组件”的松散耦合单元之中，来实现关注点分离。
 #### JSX 也是一个表达式
+JSX就是Javascript和XML结合的一种格式。React发明了JSX，利用HTML语法来创建虚拟DOM。当遇到`<`，JSX就当HTML解析，遇到`{`就当JavaScript解析。
+不使用JSX写法如下:
+```jsx harmony
+React.render(
+    React.createElement('div', null,
+        React.createElement('div', null,
+            React.createElement('div', null, 'content')
+        )
+    ),
+    document.getElementById('example')
+);
+```
+JSX写法如下:
+```jsx harmony
+React.render(
+    <div>
+        <div>
+            <div>content</div>
+        </div>
+    </div>,
+    document.getElementById('example')
+);
+```
 #### JSX 特定属性
 
 #### JSX 防止注入攻击
+**HTML转义**
+
+```jsx harmony
+// wrong way
+let content='<strong>content</strong>';
+
+React.render(
+    <div>{content}</div>,
+    document.body
+);
+```
+因为 React 默认会进行HTML的转义，避免XSS攻击，如果不需要转义，可以这么写：
+```jsx harmony
+let content='<strong>content</strong>';    
+
+React.render(
+    <div dangerouslySetInnerHTML={{__html: content}}></div>,
+    document.body
+);
+```
 React DOM 在渲染所有输入内容之前，默认会进行转义。它可以确保在你的应用中，永远不会注入那些并非自己明确编写的内容。所有的内容在渲染之前都被转换成了字符串。这样可以有效地防止 XSS（cross-site-scripting, 跨站脚本）攻击。
 
 Babel 会把 JSX 转译成一个名为 React.createElement() 函数调用。
