feat: 🎸 udpate react 16以前生命周期

--- a/React/生命周期.md
+++ b/React/生命周期.md
@@ -1,4 +1,5 @@
 [官方文档](https://zh-hans.reactjs.org/docs/react-component.html)
+
 ### 挂载
 #### constructor
 在 React 中，构造函数仅用于以下两种情况
@@ -149,3 +150,24 @@ if (promiseList.length) {
 - 可以在componentDidMount中直接调用setState。它将触发额外渲染，但此渲染会发生在浏览器更新屏幕之前。如此保证了即使在 render() 两次调用的情况下，用户也不会看到中间状态。
 要避免在构造函数中引入任何副作用和订阅。遇到此场景，将对应的操作放在componentDidMount中。
 - 可以在 componentDidUpdate中直接调用setState，但必须被包裹在一个条件语句里，否则会导致死循环。他还会导致额外的渲染，虽然用户看不见，但是会影响性能。
+
+
+
+### React 16之前的生命周期
+#### 挂载
+这些方法会在组件实例被创建同时插入DOM中被调用：
+- constructor
+- componentWillMount
+- render
+- componentDidMount
+
+#### 更新
+属性或状态的改变会触发一次更新。当一个组件在被重渲时，这些方法将会被调用：
+- componentWillReceiveProps
+- shouldComponentUpdate
+- componentWillUpdate
+- render
+- componentDidUpdate
+
+#### 卸载
+- componentWillUnmount
