feat: 🎸 class & static

--- a/React/生命周期.md
+++ b/React/生命周期.md
@@ -29,7 +29,13 @@ constructor(props) {
     - 适用于 state 的值在任何时候都取决于 props
     - 特点：**每次渲染前触发此方法**。UNSAFE_componentWillReceiveProps仅在父组件更新渲染时触发，而不是在内部调用setState时。
     
-    
+❓ 为什么react要把getDeriveStateFromProps()这个钩子要设置为static呢？
+`
+该提案的目标是降低写作风险   异步兼容的React组件我相信可以实现   通过消除当前API中的许多潜在陷阱   保留API支持的重要功能。可以做到   通过以下组合：
+选择目的明确，用途有限的生命周期方法名称。
+将某些生命周期设为静态，以防止不安全地访问实例属性。
+不可能检测或预防所有副作用（例如突变）   全局/共享对象）。
+`
 **getDerivedStateFromProps和componentWillReceiveProps，只要父级重新渲染时，这两个生命周期就会重新调用，不管props有没有变化**
 该函数会在挂载时，接收到新的props，调用了setState和forceUpdate时被调用
 
