feat: 🎸 清除浮动 & bfc

--- a/CSS/清除浮动.md
+++ b/CSS/清除浮动.md
@@ -2,7 +2,7 @@
 
 
 ### 浮动原理
-浮动元素脱离文档流，不占据空间。浮动元素碰到包含它的边框或者浮动元素的边框停留。
+浮动元素脱离文档流，不占据空间。浮动元素碰到包含它的边框或者浮动元素的边框停留。浮动元素总是要保证自己的顶部与上一个标准流中的元素（未浮动元素）的底部对齐。
 
 
 ### 清除浮动方法
