feat: 🎸 观察者模式

--- a/Javascript/设计模式.md
+++ b/Javascript/设计模式.md
@@ -340,6 +340,51 @@ salesOffices.trigger(2000, 88);
 salesOffices.trigger(3000, 110);
 ```
 
+### 观察者模式
+```js
+function Subject() {
+  this.observers = [];
+  this.registerObserver = function(observer) {
+    if (this.observers.indexOf(observer) === -1) {
+      this.observers.push(observer);
+    }
+  };
+  this.unregisterObserver = function(observer) {
+    const index = this.observers.indexOf(observer);
+    if (index > -1) {
+      this.observers.splice(index, 1);
+    }
+  };
+  this.notifyObservers = function(message) {
+    this.observers.forEach(function(observer) {
+      observer.notify(message);
+    });
+  };
+}
+
+function Observer() {
+  this.notify = function(message) {
+
+  };
+}
+```
+用法
+```js
+function Employee(name) {
+  this.name = name;
+  this.notify = function(meetingTime) {
+    console.log(this.name + ': there is a meeting at ' + meetingTime);
+  };
+}
+
+const bob = new Employee('Bob');
+const jane = new Employee('Jane');
+var meetingAlerts = new Subject();
+meetingAlerts.registerObserver(bob);
+meetingAlerts.registerObserver(jane);
+meetingAlerts.notifyObservers('4pm');
+```
+
 ### 命令模式
 ```html
 <body>
