--- a/算法/排序.md
+++ b/算法/排序.md
@@ -2,112 +2,83 @@
 排序算法对比
 ![复杂度对比](https://user-gold-cdn.xitu.io/2016/11/29/4abde1748817d7f35f2bf8b6a058aa40?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 ### 堆排序
+1. 创建一个堆 H[0……n-1]；
+2. 把堆首（最大值）和堆尾互换；
+3. 把堆的尺寸缩小 1，并调用 shift_down(0)，目的是把新的数组顶端数据调整到相应位置；
+4. 重复步骤 2，直到堆的尺寸为 1。
 ```js
-/*方法说明：堆排序
-@param  array 待排序数组*/
 function heapSort(array) {
-    console.time('堆排序耗时');
-    if (Object.prototype.toString.call(array).slice(8, -1) === 'Array') {
-        //建堆
-        var heapSize = array.length, temp;
-        for (var i = Math.floor(heapSize / 2) - 1; i >= 0; i--) {
-            heapify(array, i, heapSize);
-        }
-
-        //堆排序
-        for (var j = heapSize - 1; j >= 1; j--) {
-            temp = array[0];
-            array[0] = array[j];
-            array[j] = temp;
-            heapify(array, 0, --heapSize);
-        }
-        console.timeEnd('堆排序耗时');
-        return array;
-    } else {
-        return 'array is not an Array!';
-    }
+  //建堆
+  let heapSize = array.length;
+  for (let i = Math.floor(heapSize / 2) - 1; i >= 0; i--) {
+    heapify(array, i, heapSize);
+  }
+  //堆排序
+  for (let j = heapSize - 1; j >= 1; j--) {
+    [array[0], array[j]] = [array[j], array[0]];
+    heapify(array, 0, --heapSize);
+  }
+  return array;
 }
 
-/*方法说明：维护堆的性质
-@param  arr 数组
-@param  x   数组下标
-@param  len 堆大小*/
+//大顶堆
 function heapify(arr, x, len) {
-    if (Object.prototype.toString.call(arr).slice(8, -1) === 'Array' && typeof x === 'number') {
-        var l = 2 * x + 1, r = 2 * x + 2, largest = x, temp;
-        if (l < len && arr[l] > arr[largest]) {
-            largest = l;
-        }
-        if (r < len && arr[r] > arr[largest]) {
-            largest = r;
-        }
-        if (largest != x) {
-            temp = arr[x];
-            arr[x] = arr[largest];
-            arr[largest] = temp;
-            heapify(arr, largest, len);
-        }
-    } else {
-        return 'arr is not an Array or x is not a number!';
-    }
+  let l = 2 * x + 1, r = 2 * x + 2, largest = x;
+  if (l < len && arr[l] > arr[largest]) {
+    largest = l;
+  }
+  if (r < len && arr[r] > arr[largest]) {
+    largest = r;
+  }
+  if (largest != x) {
+    [arr[x], arr[largest]] = [arr[largest], arr[x]];
+    heapify(arr, largest, len);
+  }
 }
 
-var arr = [91, 60, 96, 13, 35, 65, 46, 65, 10, 30, 20, 31, 77, 81, 22];
+const arr = [91, 60, 96, 13, 35, 65, 46, 65, 10, 30, 20, 31, 77, 81, 22];
 console.log(heapSort(arr));//[10, 13, 20, 22, 30, 31, 35, 46, 60, 65, 65, 77, 81, 91, 96]
 ```
 
 
 ### 快速排序
 ```js
-/*方法说明：快速排序
-@param  array 待排序数组*/
-
 //方法一
 function quickSort(array, left, right) {
-    console.time('1.快速排序耗时');
-    if (Object.prototype.toString.call(array).slice(8, -1) === 'Array' && typeof left === 'number' && typeof right === 'number') {
-        if (left < right) {
-            var x = array[right], i = left - 1, temp;
-            for (var j = left; j <= right; j++) {
-                if (array[j] <= x) {
-                    i++;
-                    temp = array[i];
-                    array[i] = array[j];
-                    array[j] = temp;
-                }
-            }
-            quickSort(array, left, i - 1);
-            quickSort(array, i + 1, right);
-        }
-        console.timeEnd('1.快速排序耗时');
-        return array;
-    } else {
-        return 'array is not an Array or left or right is not a number!';
+  if (left < right) {
+    let x = array[right], i = left - 1;
+    for (let j = left; j <= right; j++) {
+      if (array[j] <= x) {
+        i++;
+        [arr[i], arr[j]] = [arr[j], arr[i]];
+      }
     }
+    quickSort(array, left, i - 1);
+    quickSort(array, i + 1, right);
+  }
+  return array;
 }
 
 //方法二
-var quickSort2 = function (arr) {
-    console.time('2.快速排序耗时');
-    if (arr.length <= 1) {
-        return arr;
+const quickSort2 = function(arr) {
+  if (arr.length <= 1) {
+    return arr;
+  }
+  let pivotIndex = Math.floor(arr.length / 2);
+  let pivot = arr.splice(pivotIndex, 1)[0];
+  let left = [];
+  let right = [];
+  for (let i = 0; i < arr.length; i++) {
+    if (arr[i] < pivot) {
+      left.push(arr[i]);
+    } else {
+      right.push(arr[i]);
     }
-    var pivotIndex = Math.floor(arr.length / 2);
-    var pivot = arr.splice(pivotIndex, 1)[0];
-    var left = [];
-    var right = [];
-    for (var i = 0; i < arr.length; i++) {
-        if (arr[i] < pivot) {
-            left.push(arr[i]);
-        } else {
-            right.push(arr[i]);
-        }
-    }
-    console.timeEnd('2.快速排序耗时');
-    return quickSort2(left).concat([pivot], quickSort2(right));
+  }
+  return quickSort2(left).concat([pivot], quickSort2(right));
 };
 
-var arr = [3, 44, 38, 5, 47, 15, 36, 26, 27, 2, 46, 4, 19, 50, 48];
+const arr = [3, 44, 38, 5, 47, 15, 36, 26, 27, 2, 46, 4, 19, 50, 48];
 console.log(quickSort(arr, 0, arr.length - 1));//[2, 3, 4, 5, 15, 19, 26, 27, 36, 38, 44, 46, 47, 48, 50]
 console.log(quickSort2(arr));//[2, 3, 4, 5, 15, 19, 26, 27, 36, 38, 44, 46, 47, 48, 50]
 ```
