--- a/ES6/方法汇总.md
+++ b/ES6/方法汇总.md
@@ -429,3 +429,14 @@ function getType(value) {
 
 
 
+### 长递归栈溢出
+函数调用会在内存形成一个"调用记录"，又称"调用帧"（call frame），保存调用位置和内部变量等信息。如果在函数A的内部调用函数B，那么在A的调用记录上方，还会形成一个B的调用记录。
+
+### 尾调用优化
+尾递归，只保留一个调用记录，复杂度 O(1) 。
+```js
+function factorial (number, result = 1) {
+  if (number === 1) return result
+  return factorial(number - 1, number * result)
+}
+```
