--- a/React/性能优化.md
+++ b/React/性能优化.md
@@ -2,6 +2,15 @@
 #### 使用React.Memo来缓存组件
 #### 使用useMemo缓存大量的计算
 #### 使用React.PureComponent , shouldComponentUpdate
+当使用component时，父组件的state或prop更新时，无论子组件的state、prop是否更新，都会触发子组件的更新，这会形成很多没必要的render，浪费很多性能；pureComponent的优点在于：pureComponent在shouldComponentUpdate只进行浅层的比较，只要外层对象没变化，就不会触发render,减少了不必要的render，省去了virtual DOM的diff和重新生成的过程，从而提升了性能。当遇到复杂数据结构时，可以将一个组件拆分成多个pureComponent，以这种方式来实现复杂数据结构，以期达到节省不必要渲染的目的，如：表单、复杂列表、文本域等情况；
+
+
+**pureComponent的优缺点**
+1. pureComponent的优点：
+    不需要开发者使用shouldComponentUpdate就可使用简单的判断来提升性能；
+2. pureComponent的缺点：
+    由于进行的是浅比较，可能由于深层的数据不一致导致而产生错误的否定判断，从而导致页面得不到更新；
+
 #### 避免使用内联对象
 > 使用内联对象时，react会在每次渲染时重新创建对此对象的引用，这会导致接收此对象的组件将其视为不同的对象,因此，该组件对于prop的浅层比较始终返回false,导致组件一直重新渲染。许多人使用的内联样式的间接引用，就会使组件重新渲染，可能会导致性能问题。为了解决这个问题，我们可以保证该对象只初始化一次，指向相同引用。另外一种情况是传递一个对象，同样会在渲染时创建不同的引用，也有可能导致性能问题，我们可以利用ES6扩展运算符将传递的对象解构。这样组件接收到的便是基本类型的props，组件通过浅层比较发现接受的prop没有变化，则不会重新渲染
 
