--- a/性能/项目性能优化.md
+++ b/性能/项目性能优化.md
@@ -276,3 +276,12 @@ export default async (templateNames = []) => templateNames.reduce(async (result,
   return result;
 }, {});
 ```
+
+### 以后优化点
+从配置文件中读取需要动态引入的js，把这部分内容引入到script中
+
+
+### 京东的js请求
+nginx配置合并js和css文件请求
+
+http://misc.360buyimg.com/??product/home/1.0.0/js/init.js,jdf/1.0.0/unit/wl/1.0.0/wl.js
