--- a/CSS/布局.md
+++ b/CSS/布局.md
@@ -381,3 +381,83 @@ DOM结构同上
 }
 ```
 
+### 两栏布局
+#### 双列直插式
+原理：两个元素都设置dislpay：inline-block，为了消除HTML空间的影响，父元素的字体大小需要设置为0，正确匹配元素的宽度使用计算函数计算。如果两个元素的高度不一样，可以给元素设置vertical-align：top调整。
+```html
+<style>
+    .box {
+        height: 600px;
+        width: 100%;
+        font-size: 0;
+    }
+
+    .left {
+        display: inline-block;
+        width: 100px;
+        height: 200px;
+        background-color: red;
+    }
+
+    .right {
+        display: inline-block;
+        width: calc(100% - 100px);
+        height: 200px;
+        background-color: blue;
+    }
+</style>
+<div class="box">
+    <div class="left">
+        <span>1234</span>
+    </div>
+    <div class="right">
+        <span>1234</span>
+    </div>
+</div>
+```
+#### 双浮动
+原理：两个元素设置浮动，右侧自适应元素宽度使用calc函数计算
+缺点：父元素需要清除浮动
+```css
+.box {
+    height: 600px;
+    width: 100%;
+}
+
+.left {
+    float: left;
+    width: 100px;
+    height: 200px;
+    background-color: red;
+}
+
+.right {
+    float: left;
+    width: calc(100% - 100px);
+    height: 200px;
+    background-color: blue;
+}
+```
+
+#### 浮动+margin
+原理：预设定宽元素浮动，右侧自适应元素设置margin-left的值大于定宽元素的宽度即可
+缺点：父元素需要清除浮动。
+```css
+.box {
+    height: 600px;
+    width: 100%;
+}
+
+.left {
+    float: left;
+    width: 100px;
+    height: 200px;
+    background-color: red;
+}
+
+.right {
+    margin-left: 100px;
+    height: 200px;
+    background-color: blue;
+}
+```
