feat: 🎸 数组扁平化

--- a/Javascript/数组扁平化.md
+++ b/Javascript/数组扁平化.md
@@ -40,11 +40,23 @@ function flatArray(array) {
 - 扩展运算符
 
 ```js
-while (ary.some(Array.isArray)) {
-    ary = [].concat(...ary);
-}
+const flatArray = function(arr) {
+  while (arr.some(Array.isArray)) {
+    arr = [].concat(...arr);
+  }
+  return arr
+};
 ```
 
+- 同时我们可以设置出展开特定层数的方法
+```js
+function flatten(arr, count) {
+  while (arr.some(item => Array.isArray(item) && count-- > 0)) {
+    arr = [].concat(...arr)
+  }
+  return arr
+}
+```
 - generator函数
 ```js
 
@@ -62,5 +74,12 @@ var flat = function *(a) {
 
 for(let i of flat(arr)){
     console.log(i)
+}
+```
+
+- toString
+```js
+function flatten(arr) {
+  return arr.toString().split(',').map(item => +item)
 }
 ```
