refactor: 💡 HTTP 重排

--- a/HTTP/前端缓存.md
+++ b/HTTP/前端缓存.md
@@ -4,7 +4,7 @@
 问题：服务器的时间和浏览器的时间可能并不一致
 #### Cache-Control(HTTP/1.1)
 - public: 客户端和代理服务器都可以缓存
-- private: 只有浏览器能缓存
+- private: 只有浏览器能缓存，不能作为共享缓存（代理服务器不能缓存它）
 - no-cache: 跳过当前强缓存，发送HTTP请求，进入协商缓存阶段
 - no-store: 不进行任何形式的缓存
 - s-maxage: 针对代理服务器的缓存时间
