feat: 🎸 this update

--- a/ES6/方法汇总.md
+++ b/ES6/方法汇总.md
@@ -247,6 +247,75 @@ ES6 模块不是对象，而是通过export命令显式指定输出的代码
 
 
 
+### Array.toString()
+toString() 返回一个字符串，表示指定的数组及其元素。
+Array对象覆盖了Object的 toString 方法。对于数组对象，toString 方法连接数组并返回一个字符串，其中包含用逗号分隔的每个数组元素。
+
+#### Array方法
+- Array.from
+```js
+// 创建二维数组
+Array.from(new Array(5),()=> (new Array(5)).fill(0))
+```
+- Array.isArray
+- Array.of
+- concat
+> concat 传参可传arguments，可以传数组
+
+
+##### 连接两个数组 
+```js
+const alpha = ['a', 'b', 'c'];
+const numeric = [1, 2, 3];
+alpha.concat(numeric);
+// result in ['a', 'b', 'c', 1, 2, 3]
+```
+
+##### 连接三个数组 
+```js
+const alpha = ['a', 'b', 'c'];
+const numeric = [1, 2, 3];
+const num3 = [7, 8, 9];
+const nums = alpha.concat(numeric, num3);
+//results in [1, 2, 3, 4, 5, 6, 7, 8, 9]
+```
+##### 将值连接到数组
+```js
+const alpha = ['a', 'b', 'c'];
+const nums = alpha.concat(1, [2, 3]);
+// results in ['a', 'b', 'c', 1, 2, 3]
+```
+- copyWithin
+- entries
+- every
+- fill
+- filter
+- find
+- findIndex
+- flat
+- flatMap
+- forEach
+- includes
+- indexOf
+- join
+- keys
+- lastIndexOf
+- map
+- pop
+- push
+- reduce
+- reduceRight
+- reverse
+- shift
+- slice
+- some
+- sort
+- splice
+- toLocaleString
+- toSource
+- unshift
+- values
+
 
 ### 1. 数组去重
 ```js
