--- a/Javascript/作用域、执行上下文.md
+++ b/Javascript/作用域、执行上下文.md
@@ -1,3 +1,69 @@
 每个函数都有自己的执行环境。当执行流进入一个函数时，函数的环境就会被推入一个执行栈中，而在函数执行之后，栈将其环境弹出，把控制权返回给之前的执行环境。
 当代码在一个环境中执行时，会创建变量对象的一个作用域链。作用域链的用途，是保证对执行环境有权访问的所有变量和函数的有序访问。作用域链的
 下一个变量对象是来自包含环境。一直延续到全局执行环境。
+
+### 执行上下文栈
+当执行一个函数的时候，就会创建一个执行上下文，并且压入执行上下文栈，当函数执行完毕的时候，就会将函数的执行上下文从栈中弹出。
+
+```js
+var scope = "global scope";
+function checkscope(){
+    var scope = "local scope";
+    function f(){
+        return scope;
+    }
+    return f();
+}
+checkscope();
+```
+
+👇 执行上下文栈
+```js
+ECStack.push(<checkscope> functionContext);
+ECStack.push(<f> functionContext);
+ECStack.pop();
+ECStack.pop();
+```
+
+```js
+var scope = "global scope";
+function checkscope(){
+    var scope = "local scope";
+    function f(){
+        return scope;
+    }
+    return f;
+}
+checkscope()();
+```
+
+👇 执行上下文栈
+```js
+ECStack.push(<checkscope> functionContext);
+ECStack.pop();
+ECStack.push(<f> functionContext);
+ECStack.pop();
+```
+
+
+### 作用域
+#### 静态作用域与动态作用域
+因为 JavaScript 采用的是词法作用域，函数的作用域在函数定义的时候就决定了。
+而与词法作用域相对的是动态作用域，函数的作用域是在函数调用的时候才决定的。
+```js
+var scope = "global scope";
+function checkscope(){
+    var scope = "local scope";
+    function f(){
+        return scope;
+    }
+    return f;
+}
+checkscope()();
+```
+
+JavaScript 函数的执行用到了作用域链，这个作用域链是在函数定义的时候创建的。嵌套的函数 f() 定义在这个作用域链里，其中的变量 scope 一定是局部变量，不管何时何地执行函数 f()，这种绑定在执行 f() 时依然有效。
+
+
+### 作用域链
+当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(词法层面上的父级)执行上下文的变量对象中查找，一直找到全局上下文的变量对象，也就是全局对象。这样由多个执行上下文的变量对象构成的链表就叫做作用域链。
