--- a/Javascript/作用域、执行上下文.md
+++ b/Javascript/作用域、执行上下文.md
@@ -67,3 +67,6 @@ JavaScript 函数的执行用到了作用域链，这个作用域链是在函数
 
 ### 作用域链
 当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(词法层面上的父级)执行上下文的变量对象中查找，一直找到全局上下文的变量对象，也就是全局对象。这样由多个执行上下文的变量对象构成的链表就叫做作用域链。
+
+[作用域链](https://github.com/mqyqingfeng/Blog/issues/6)
+[执行上下文](https://github.com/mqyqingfeng/Blog/issues/8)
