--- a/Javascript/源码实现.md
+++ b/Javascript/源码实现.md
@@ -148,6 +148,51 @@ const hello =asyncToGenerator(testG)();
 hello.then(value=>console.log(value));
 ```
 #### async 实现原理
+async 使得后面的 function 始终返回一个 promise，无论 function 本身返回的是否是 promise。
+await 必须在 async 函数内部使用，只有等到 await 后面的部分执行完成后，函数才会继续往下执行。
+
+**使用**
+```js
+async function f() {
+  const promise = new Promise((resolve, reject) => {
+    setTimeout(() => resolve("done!"), 1000)
+  })
+  const result = await promise; // wait till the promise resolves (*)
+  alert(result)
+}
+f();
+```
+await 会把后面的 promise 放到 microtask queue 中，所以当 await 和 setTimeout 放到一起时，会先执行 await 的部分，再执行 setTimeout 的部分（setTimeout 会进入 macrotask，优先级低于 microtask）。
+```js
+async function f() {
+    return 1
+}
+
+(async () => {
+    setTimeout(() => console.log('setTimeout is done'), 0)
+    await f()
+    console.log('await is done')
+})()
+```
+**基本原理**
+async / await 本质上是 generator 的语法糖，与 generator 相比，多了以下几个特性：
+- 内置执行器，无需手动执行 next() 方法
+- await 后面的函数可以是 promise 对象也可以是普通 function，而 yield 关键字后面必须得是 thunk 函数或 promise 对象
+
+```js
+async function fn(args) {
+  
+}
+```
+等同于：
+```js
+function fn(args) {
+   return spawn(function* () {
+     
+   })
+}
+```
+
 ```js
 function spawn(genF) {
     return new Promise(function (resolve, reject) {
