--- a/Javascript/源码实现.md
+++ b/Javascript/源码实现.md
@@ -564,7 +564,7 @@ Object.create = function (prototype, properties) {
 
 ### instanceof 实现
 instanceof 运算符用于检测构造函数的 prototype 属性是否出现在某个实例对象的原型链上。
-> 原理： L 的 __proto__ 是不是等于 R.prototype，不等于再找 L.__proto__.__proto__ 直到 __proto__ 为 null
+> 原理： L 的 `__proto__` 是不是等于 `R.prototype`，不等于再找 `L.__proto__.__proto__` 直到 `__proto__` 为 null
 ```js
 function instance_of(L, R) {
     var O = R.prototype;
