--- a/Javascript/面向对象.md
+++ b/Javascript/面向对象.md
@@ -165,7 +165,7 @@ function Person(name, age, job) {
 
 ## 继承
 
-- 原型链继承
+### 原型链继承
 > 重写原型对象
 ````js
 SubType.prototype = new SuperType()
@@ -194,7 +194,7 @@ SubType 的所有实例都会共享colors属性
 **问题2**
 在创建子类型的实例时，不能向超类型的构造函数中传递参数。应该说是没办法在不影响所有对象实例的情况下，给超类型的构造函数传递参数
 
-- 借用构造函数
+### 借用构造函数
 ```js
 function SuperType() {
     this.colors = ['red', 'yellow', 'blue']
@@ -221,7 +221,7 @@ function SubType() {
  **劣势：无法复用**
 无法避免构造函数模式存在的问题--方法都在构造函数中定义，无法函数复用
 
-- 组合继承
+### 组合继承
 使用原型链实现对原型属性和方法的继承，通过借用构造函数实现对实例属性的继承
 ```js
 function SuperType(name) {
@@ -246,7 +246,7 @@ SubType.prototype.sayAge = function () {
 **劣势：**
 无论什么情况下，都会调用两次超类型构造函数：一次是在创建子类型原型的时候，一次是在子类型构造函数内部。子类型最终会包含超类型对象的全部实例属性
 
-- 原型式继承
+### 原型式继承
 借助原型可以基于已有的对象创建新对象，同时不必因此创建自定义类型
 ```js
 function object(o) {
@@ -255,6 +255,9 @@ function object(o) {
     return new F()
 }
 ```
+
+新对象以o作为原型，它的原型中包含了一个基本类型值属性和一个应用类型值属性。
+
 Object()对传入其中的对象执行了一次浅复制。
 Object.create方法规范了原型式继承。接收两个参数：一个用作新对象原型的对象和一个为新对象定义额外属性的对象
 ```js
@@ -268,7 +271,7 @@ const annotherPerson = Object.create(person, {
     }
 })
 ```
-- 寄生式继承
+### 寄生式继承
 ```js
 function object(o) {
     function F() {
@@ -296,7 +299,10 @@ annotherPerson.sayHi()
 **问题**
 同构造函数模式一样，不能做到函数复用而降低效率
 
-- 寄生组合式继承
+主要考虑对象不是自定义类型和构造函数的情况下，寄生式继承也是一种有用的模式。object函数不是必须的，任何能够返回新对象的函数都会适用于此模式。
+
+
+### 寄生组合式继承
 通过借用构造函数继承属性，通过原型链的混成形式来继承方法
 ```js
 function inheritPrototype(subType, superType) {
@@ -306,8 +312,54 @@ function inheritPrototype(subType, superType) {
 }
 ```
 
+```js
+function SuperType(name) {
+    this.name = name
+    this.colors = ["red", "blue", "green"]
+}
+
+SuperType.prototype.sayName = function () {
+    console.log(this.name)
+}
+
+function SubType(name, age) {
+    SuperType.call(this, name)  // 第一次
+    this.age = age
+}
+
+inheritPrototype(SubType, SuperType)
+SubType.prototype.sayAge = function () {
+    console.log(this.age)
+}
+```
+
+
+组合继承最大的问题就是无论什么情况，都会调用两次超类型构造函数。
+```js
+function SuperType(name) {
+    this.name = name
+    this.colors = ["red", "blue", "green"]
+}
+
+SuperType.prototype.sayName = function () {
+    console.log(this.name)
+}
+
+function SubType(name, age) {
+    SuperType.call(this, name)  // 第一次
+    this.age = age
+}
+
+SubType.prototype = new SuperType()  // 第二次
+SubType.prototype.constructor = SubType
+SubType.prototype.sayAge = function () {
+    console.log(this.age)
+}
+```
+影响： 有两组name和colors属性：一组在实例上，一组在SubType原型中。
+
 **优点**
-只调用一次SuperType构造函数，并且因此避免了在SubType.prototype上创建不必要的、多余的属性。与此同时，原型链保持不变，。
+只调用一次SuperType构造函数，并且因此避免了在SubType.prototype上创建不必要的、多余的属性。与此同时，原型链保持不变。
 
 
 #### 原型链
