--- a/Javascript/源码实现.md
+++ b/Javascript/源码实现.md
@@ -948,3 +948,27 @@ function _inherits(subClass, superClass) {
     }
 }
 ```
+
+#### 扁平化
+```js
+const flattenDeep = array => array.flat(Infinity)
+```
+#### 去重
+```js
+const unique = array => Array.from(new Set(array))
+```
+
+#### 排序
+```js
+const sort = array => array.sort((a, b) => a - b)
+```
+
+#### 函数组合
+```js
+const compose = (...fns) => initValue => fns.reduceRight((y, fn) => fn(y), initValue)
+```
+#### 组合后函数
+```js
+const flatten_unique_sort = compose(sort, unique, flattenDeep)
+```
+
