feat: update 布局

--- a/CSS/布局.md
+++ b/CSS/布局.md
@@ -1,4 +1,4 @@
-### 2:1 布局
+### 随页面宽度变化 宽高比 2:1 布局
 #### 伪元素
 ```html
 <style>
@@ -20,14 +20,14 @@
 <div class="container">
 ```
 #### 内容绝对定位
+原理：
+**垂直方向上的内外边距使用百分比做单位时，是基于包含块的宽度来计算的。**
 ```html
 <style>
     .container {
         background-color: #00acec;
-        overflow: hidden;
         padding-top: 50%;
         position: relative;
-        height: 0;
     }
     .content{
         position: absolute;
