--- a/Regex/正则.md
+++ b/Regex/正则.md
@@ -10,6 +10,19 @@
 | str.replace(regex, callback)  | 对匹配的内容进行callback替换                 |
 
 
+```js
+const str = "https://www.google.com.hk/search?q=%E6%89%93%E5%8F%91%E6%96%AF%E8%92%82%E8%8A%AC&oq=%E6%89%93%E5%8F%91%E6%96%AF%E8%92%82%E8%8A%AC&aqs=chrome..69i57.1222j1j7&sourceid=chrome&ie=UTF-8"
+
+const regex = /=/g
+
+const resultTest = regex.test(str)  // true
+
+const resultMatch = str.match(regex)  // ['=','=','=','=','=']
+
+
+```
+
+
  元字符          | 描述                                   |
 |-------------------|-----------------------------------------|
 | \w   | 匹配包括下划线的任何单词字符                          |
