--- a/面试题/计时器.md
+++ b/面试题/计时器.md
@@ -29,7 +29,7 @@ export default function App() {
     return () => {
       clearInterval(id);
     };
-  }, []);
+  }, [seconds]);
   return (
     <div className="App">
       <h1>{Math.floor(seconds)}</h1>
