--- a/面试题/计时器.md
+++ b/面试题/计时器.md
@@ -39,6 +39,46 @@ export default function App() {
 }
 ```
 
+```jsx
+export default function App() {
+  const startTime = Date.now();
+  const [time, setTime] = useState(startTime);
+  useEffect(() => {
+    const id = setInterval(() => {
+      setTime(Date.now() - startTime);
+    }, 1000);
+    return () => {
+      clearInterval(id);
+    };
+  }, []);
+  return (
+    <div className="App">
+      <h1>{time}</h1>
+      <h2>Start editing to see some magic happen!</h2>
+    </div>
+  );
+}
+```
+
+```js
+export default function App() {
+  const [time, setTime] = useState(0);
+  useEffect(() => {
+    const id = setInterval(() => {
+      setTime(previousCount => previousCount + 1);
+    }, 1000);
+    return () => {
+      clearInterval(id);
+    };
+  }, []);
+  return (
+    <div className="App">
+      <h1>{time}</h1>
+      <h2>Start editing to see some magic happen!</h2>
+    </div>
+  );
+}
+```
 
 ```jsx
 export default function App() {
@@ -58,5 +98,20 @@ export default function App() {
       <h2>Start editing to see some magic happen!</h2>
     </div>
   );
+}
+```
+
+
+```jsx
+export default function App() {
+    const [variable, setVariable] = useState(0)
+    setTimeout(() => {
+        setVariable(variable + 1)
+    }, 1000)
+    return (
+        <div className="App">
+            {variable}
+        </div>
+    );
 }
 ```
