--- a/ES6/方法汇总.md
+++ b/ES6/方法汇总.md
@@ -219,6 +219,48 @@ Object.is(-0, +0) === false
 Map 的 has 是用来查找键名的
 Set 的 has 是用来查找键值的
 
+#### Map和Object的区别
+1. Object中，key必须是简单数据类型（整数、字符串或者symbol），在Map中可以使JavaScript支持的所有数据类型，也就是说可以用一个Object来当做一个Map元素的key
+2. Map元素的顺序遵循插入的顺序，Object没有这一特性
+3. Map继承自Object对象
+
+4. Object支持以下几种方式创建新的实例
+```js
+const obj = {}
+const obj = new Object()
+const obj = Object.create(null)
+```
+
+Map 仅支持下面这一种构建方法
+```js
+const map = new Map([[1,2],[2,3]])
+```
+
+5. 数据访问
+```js
+map.get(1)
+map.has(1)
+map.set(key,value)
+map.delete(1)
+map.clear()
+
+// 获取数据
+obj.id
+obj['id']
+// 新增
+obj['key']=value
+obj.key=value
+// 删除
+delete obj.id
+```
+
+6. 何时使用Map，何时使用Object
+  a. 当要存储的是简单数据类型，并且key都为字符串或者整数或者symbol的时候，优先使用Object，因为Object可以使用字符变量的方式创建，更加高效。
+  b. JSON 直接支持 object，不支持map
+  c. Map 是纯粹的hash，而Object还存在一些其他内在逻辑，所以在执行delete的时候会有性能问题。所以写入删除密集的情况应该使用Map
+  d. Map会按照插入顺序保持元素的顺序，Object做不到
+  e. Map 在存储大量元素的时候性能表现更好，特别是代码执行时不能确定key类型的情况。
+
 ### 箭头函数
 它和普通函数最不同的一点就是对于箭头函数的this指向，是根据它外层（函数/全局）作用域来决定
 对于箭头函数，this 关键字指向的是它当前周围作用域（简单来说是包含箭头函数的常规函数，如果没有常规函数的话就是全局对象），这个行为和常规函数不同。
