--- a/面试题/计时器.md
+++ b/面试题/计时器.md
@@ -101,6 +101,27 @@ export default function App() {
 }
 ```
 
+```jsx
+export default function App() {
+  const [seconds, setSeconds] = useState(0);
+
+  useEffect(() => {
+    const id = setTimeout(() => {
+      setSeconds(seconds => seconds + 1);
+    }, 1000);
+    return () => {
+      clearInterval(id);
+    };
+  });
+  return (
+    <div className="App">
+      <h1>{Math.floor(seconds)}</h1>
+      <h2>Start editing to see some magic happen!</h2>
+    </div>
+  );
+}
+```
+
 
 ```jsx
 export default function App() {
